# AI-Vtuber

./: .gitignore  config.json  main.py  pyproject.toml  requirements.txt  start_aivtuber.ps1  webui.py  停止AI-Vtuber.bat  停止AI-Vtuber.ps1  启动AI-Vtuber.bat  启动AI-Vtuber.ps1
utils/: audio.py  bilibili_sender.py  common.py  config.py  data_analysis.py  my_handle.py  my_log.py
utils/audio_handle/: my_tts.py
utils/gpt_model/: gpt.py  zhipu.py
