[tool.poetry]
name = "ai-vtuber"
version = "0.30.0"
description = "Slimmed AI Vtuber for Bilibili live reply"
authors = ["ikaros <327209194@qq.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "2.32.3"
blivedm = { git = "https://gitee.com/ikaros-521/blivedm", rev = "c9ac671f783c4c3eaa4ee4e7738226ebbf402259" }
aiohttp = "3.9.1"
schedule = "*"
pygame = "*"
edge-tts = "6.1.6"
bilibili-api-python = "*"
zhipuai = "*"
nicegui = "1.4.30"
colorlog = "*"
loguru = "*"
langid = "*"
profanity = "1.1"
pyahocorasick = "*"
pypinyin = "*"
send2trash = "*"
pydantic = "1.10.13"
pyjwt = "*"
packaging = "*"
pydub = "*"
httpx = "0.25.2"
Pillow = "10.1.0"
curl_cffi = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
